--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
                                         target="_blank"><img src="c06ab6215874e10d463902b7857be624352a5bc5.png"
                                             class="w-10 h-10 rounded-full"></a></div>
                             </div>
-                            <div id="connect_button" class="flex justify-center pt-6">
-                                <div id="connect_button" class="bg-yellow-400 border border-yellow-500 rounded-full px-6 py-2 w-fit">
-                                    <p id="connect_button" style="cursor: pointer;" class="text-2xl font-bold">Claim Airdrop</p>
+                            <div class="flex justify-center pt-6">
+                                <div class="bg-yellow-400 border border-yellow-500 rounded-full px-6 py-2 w-fit">
+                                    <p style="cursor: pointer;" class="text-2xl font-bold">Claim Airdrop</p>
                                 </div>
                             </div>
                         </div>
